--- a/overlay-pixel/common/frameworks/base/core/res/res/values/strings.xml
+++ b/overlay-pixel/common/frameworks/base/core/res/res/values/strings.xml
@@ -47,7 +47,7 @@
     <string name="config_helpPackageNameKey">genie-eng:app_pkg_name</string>
     <string name="config_helpPackageNameValue">com.google.android.settings.gphone</string>
     <string name="config_icon_mask">M50 0C77.6 0 100 22.4 100 50C100 77.6 77.6 100 50 100C22.4 100 0 77.6 0 50C0 22.4 22.4 0 50 0Z</string>
-    <string name="config_incidentReportApproverPackage">com.google.android.permissioncontroller</string>
+    <!--string name="config_incidentReportApproverPackage">com.google.android.permissioncontroller</string-->
     <string name="config_powerSaveModeChangedListenerPackage">com.google.android.flipendo</string>
     <string name="config_recentsComponentName">com.google.android.apps.nexuslauncher/com.android.quickstep.RecentsActivity</string>
     <string name="config_secondaryHomePackage">com.google.android.apps.nexuslauncher</string>
